# jddb

./: .env.example  .eslintrc.fix.json  .gitignore  .gitleaks.toml  .gitleaksignore  .lighthouserc.json  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .secrets.new  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_VERIFICATION_9f2adfbc.md  CONTRIBUTING.md  CJDDBtest-output.txt  DEVELOPMENT-GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_IMPROVEMENTS_COMPLETE.md  Dockerfile  GEMINI.md  GITHUB_CONFIGURATION.md  LICENSE  PHASE6_SUMMARY.md  PROJECT_STATUS.md  README.md  SECURITY.md  TEST_FAILURES_ANALYSIS.md  audit.md  build.ts  bunfig.toml  cleanup.bat  critical.md  eslint.config.mjs  file-list.md  fix_lint.py  frontend.bat  index.html  npm-audit-results.json  package-lock.json  (+23 more)
.claude/: settings.local.json
.github/: pull_request_template.md  security-thresholds-temp.json
.playwright-mcp/: 103011-Dir-Communications-Labour.txt  job-103249-Dir-Business-Analysis.txt  (+2 more)
backend/: .coverage  .env.example  .mypy.ini  COVERAGE_IMPROVEMENT_STRATEGY.md  Dockerfile  Makefile  README.md  REDIS_SETUP.md  alembic.ini  analyze_dead_code.py  bandit-report.json  celery_worker.py  check_db.py  check_routes.py  check_tables.py  coverage.json  fix_alembic.py  fix_remaining_types.py  pyproject.toml  security-audit-phase2.json  simple_test.py  test_api.py  test_pattern.py  test_results.txt  test_tm_service.py
backend/alembic/: env.py
backend/alembic/versions/: 004_add_job_analysis_tables.py  014_optimize_vector_indexes.py  0dcd41b28d93_add_cascade_delete_to_job_descriptions_.py  0e13c9b0cf72_add_translation_memory_tables.py  352152d04764_add_phase_2_collaborative_editing_and_.py  400307a1032c_add_search_analytics_table.py  465a48a9e37f_add_lightcast_skills_tables_and_job_.py  60d097be6a73_add_cascade_delete_to_job_comparisons_.py  6375fbf9a927_add_audit_log_table.py  65f2c3eb4088_change_salary_budget_to_float.py  70359207d894_add_pgvector_indexes_for_performance.py  8dfdfb2859ca_add_translation_memory_tables_with_.py  9063ab14ed70_add_user_authentication_tables.py  908f6218c513_add_created_at_and_updated_at_to_.py  add_rlhf_feedback_table.py  b66388585d28_add_cascade_delete_to_job_foreign_keys.py  b6ccdf00a4c0_add_analytics_and_quality_metrics_tables.py  c5d7e8a9b2c3_add_saved_searches_and_user_preferences_tables.py  f77d403fc114_enable_pgvector_extension.py  fba902742fb7_create_initial_job_description_tables.py
backend/deploy/production/: Dockerfile  docker-compose.yml
backend/scripts/: check_embeddings.py  check_performance_regression.py  create_tables_only.py  dev_server.py  generate_embeddings.py  generate_embeddings_simple.py  init_db.py  sample_data.py  security_audit_phase2.py  seed_performance_data.py  seed_phase2_data.py  seed_skills_test_data.py  simple_seed.py  start_celery_worker.py  test_content_processor1.py  test_embedding_pipeline1.py  test_file_discovery1.py
backend/src/jd_ingestion/: __init__.py
backend/src/jd_ingestion/api/: main.py
backend/src/jd_ingestion/api/endpoints/: ai_suggestions.py  analysis.py  analytics.py  auth.py  bilingual_documents.py  content_generation.py  health.py  ingestion.py  jobs.py  performance.py  phase2_monitoring.py  preferences.py  quality.py  rate_limits.py  rlhf.py  saved_searches.py  saved_searches_broken.py  search.py  search_analytics.py  tasks.py  templates.py  translation_memory.py  translation_quality.py  websocket.py
backend/src/jd_ingestion/api/v1/: __init__.py
backend/src/jd_ingestion/audit/: logger.py
backend/src/jd_ingestion/auth/: __init__.py  api_key.py  dependencies.py  models.py  service.py
backend/src/jd_ingestion/config/: settings.py
backend/src/jd_ingestion/core/: __init__.py  file_discovery.py
backend/src/jd_ingestion/database/: connection.py  models.py
backend/src/jd_ingestion/middleware/: analytics_middleware.py
backend/src/jd_ingestion/monitoring/: phase2_metrics.py
backend/src/jd_ingestion/processors/: __init__.py  content_processor.py  file_discovery.py
backend/src/jd_ingestion/processors/locales/: en.json  fr.json
backend/src/jd_ingestion/services/: ai_enhancement_service.py  analytics_service.py  bilingual_document_service.py  embedding_service.py  job_analysis_service.py  lightcast_client.py  quality_service.py  rate_limiting_service.py  rlhf_service.py  search_analytics_service.py  search_recommendations_service.py  skill_extraction_service.py  template_generation_service.py  translation_memory_service.py  translation_quality_service.py
backend/src/jd_ingestion/tasks/: celery_app.py  embedding_tasks.py  processing_tasks.py  quality_tasks.py
backend/src/jd_ingestion/utils/: __init__.py  cache.py  caching.py  circuit_breaker.py  error_handler.py  exceptions.py  logging.py  monitoring.py  operational_transform.py  retry_utils.py
backend/tests/: conftest.py
backend/tests/compliance/: __init__.py  conftest.py  test_privacy_compliance.py  test_security_compliance.py
backend/tests/integration/: test_jobs_api.py
backend/tests/performance/: test_api_performance.py
backend/tests/unit/: test_ai_enhancement_service.py  test_analysis_endpoints.py  test_analytics_endpoints.py  test_analytics_middleware.py  test_analytics_service.py  test_api_key.py  test_audit_logger.py  test_auth_dependencies.py  test_auth_endpoints.py  test_auth_models.py  test_auth_service.py  test_bilingual_document_service.py  test_cache.py  test_celery_app.py  test_celery_tasks.py  test_circuit_breaker.py  test_connection.py  test_connection_fix_summary.md  test_content_processor.py  test_database_models.py  test_embedding_service.py  test_embedding_tasks.py  test_error_handler.py  test_exceptions.py  test_file_discovery.py  test_file_discovery_integration.py  test_health_endpoints.py  test_ingestion_endpoints.py  test_job_analysis_service.py  test_jobs_endpoint.py  test_jobs_endpoints.py  test_lightcast_client.py  test_logging.py  test_main.py  test_monitoring.py  test_monitoring_utilities.py  test_performance_endpoints.py  test_phase2_metrics.py  test_phase2_monitoring_endpoints.py  test_processing_tasks.py  (+18 more)
(+1046 files in other folders)
