[project]
name = "jd-ingestion-engine"
version = "0.1.0"
description = "Government Job Description Ingestion Engine for AI Applications"
authors = [
    {name = "Pierre-Yves Fortin", email = "pierreyves.fortin@hrsdc-rhdcc.gc.ca"}
]
license = "MIT"
readme = "README.md"
requires-python = ">3.9.1,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["government", "job-descriptions", "ai", "semantic-search", "fastapi"]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "src/jd_ingestion"}]

[tool.poetry.dependencies]
python = ">3.9.1,<3.14" # Exclude Python 3.9.0 and 3.9.1 for cryptography compatibility
psutil = "^7.1.0" # This seems like a core dependency
sqlmodel = "^0.0.25"
fastapi = "^0.116.2"
uvicorn = {version = "^0.35.0", extras = ["standard"]}
pydantic = "^2.11.9"
sqlalchemy = "^2.0.43"
psycopg2-binary = "2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
pgvector = "^0.4.1"
pandas = "^2.3.2"
chardet = "5.2.0"
python-multipart = "0.0.20"
openai = "^1.108.0"
sentence-transformers = "^5.1.0"
celery = "^5.5.3"
redis = "^6.4.0"
pydantic-settings = "^2.10.1"
structlog = "^25.4.0"
python-dotenv = "^1.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Development dependencies (moved from core dependencies)
aiosqlite = "^0.21.0"
transformers = "~4.56.2"
cryptography = "~46.0"
pyjwt = {extras = ["cryptography"], version = "^2.10.1"}
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2" # Using the latest specified version
pytest-asyncio = "^1.2.0"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.18.1"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
factory-boy = "^3.3.3"
faker = "^37.8.0"
pytest-xdist = "3.8.0"
pytest-benchmark = "5.1.0"
respx = "^0.22.0"

# Build system is managed by Poetry, no need for the setuptools one
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312'] # Update target versions
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9" # Consider updating if your lowest supported is 3.9
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--asyncio-mode=auto",
    "--dist=worksteal",
    "-n=auto"
]
norecursedirs = ["scripts"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "api: API tests",
    "database: Database tests",
    "external: Tests requiring external services"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]